Your commit message here

--- a/ index.html
+++ b/ index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>To-Do List App</title>
-  <link rel="stylesheet" href="p4.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
@@ -16,6 +16,6 @@
     <ul id="taskList"></ul>
   </div>
 
-  <script src="p4.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
